--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
         "vue": "^2.6.12",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        "moment": "^2.29.1",
+        "vuejs-datepicker": "^1.6.2"
     }
 }
